syntax = "proto3";
package screen_service;

import "google/protobuf/timestamp.proto";

service ScreenService {
    rpc GetScreenHash (ScreenHashRequest) returns (ScreenHashReply);
    rpc GetScreenContent (ScreenContentRequest) returns (ScreenContentReply);
}

message ScreenHashRequest {
}

message ScreenHashReply {
    uint64 hash = 1;
}

message ScreenContentRequest {
}

message ScreenContentReply {
    //Time now = 1;  // Note: the receiving end will need to convert UTC timestamps anyway, so let it figure out the current time
    float brightness = 2;
    repeated KittyDebt kitty_debts = 3;
    repeated Departure bus_departures = 4;
    CalendarEvent next_upcoming_event = 5;
    bool error = 6;
}

// A debt as represented by our KittySplit
message KittyDebt {
    string who = 1;
    float how_much = 2;
    string whom = 3;
}

// A departure of a bus line to some destination.
message Departure {
    enum DestinationEnum {
        UNKNOWN = 0;
        RENENS = 1;
        FLON = 2;
    }
    DestinationEnum destination_enum = 1;
    google.protobuf.Timestamp departure_time = 2;
}

message CalendarEvent {
    string event_title = 1;
    google.protobuf.Timestamp event_start = 2;
}
